force-app/main/default/objects/RSM_PaieBillingPlan__c/RSM_PaieBillingPlan__c.object-meta.xml
<CustomObject>
    <label>Plan Facturation Paie</label>
    <nameField>
        <displayFormat>PBP-{00000}</displayFormat>
        <label>N° Plan</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plans Facturation Paie</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>