force-app/main/default/objects/RSM_PaieBillingPlan__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Plans Facturation Paie</relationshipLabel>
    <relationshipName>PaieBillingPlans</relationshipName>
    <type>Lookup</type>
</CustomField>