force-app/main/default/objects/RSM_PaieBillingPlan__c/fields/BillingMonth__c.field-meta.xml
<CustomField>
    <fullName>BillingMonth__c</fullName>
    <label>Mois de facturation</label>
    <type>Date</type>
</CustomField>