force-app/main/default/objects/RSM_PaieBillingPlan__c/fields/BillingScheduleId__c.field-meta.xml
<CustomField>
    <fullName>BillingScheduleId__c</fullName>
    <label>Billing Schedule Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>