force-app/main/default/objects/RSM_PaieBillingPlan__c/fields/ExternalKey__c.field-meta.xml
<CustomField>
    <fullName>ExternalKey__c</fullName>
    <externalId>true</externalId>
    <label>Clé externe (Silae)</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>