force-app/main/default/objects/RSM_PaieBillingPlan__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facture</label>
    <referenceTo>Invoice</referenceTo>
    <relationshipLabel>Plans Facturation Paie</relationshipLabel>
    <relationshipName>PaieBillingPlans</relationshipName>
    <type>Lookup</type>
</CustomField>