force-app/main/default/objects/RSM_PaieBillingPlan__c/fields/Montant__c.field-meta.xml
<CustomField>
    <fullName>Montant__c</fullName>
    <formula>NULLVALUE(NbBulletins__c,0) * NULLVALUE(PrixUnitaire__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Montant HT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>