force-app/main/default/objects/RSM_PaieBillingPlan__c/fields/NbBulletins__c.field-meta.xml
<CustomField>
    <fullName>NbBulletins__c</fullName>
    <label>Nb bulletins</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>