force-app/main/default/objects/RSM_PaieBillingPlan__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mission</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Plans Facturation Paie</relationshipLabel>
    <relationshipName>PaieBillingPlans</relationshipName>
    <type>Lookup</type>
</CustomField>