force-app/main/default/objects/RSM_PaieBillingPlan__c/fields/PrixUnitaire__c.field-meta.xml
<CustomField>
    <fullName>PrixUnitaire__c</fullName>
    <label>Prix unitaire HT</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>