force-app/main/default/objects/RSM_PaieBillingPlan__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Silae</fullName>
                <default>true</default>
                <label>Silae</label>
            </value>
            <value>
                <fullName>Saisie manuelle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>